--- a/core/state_management/templates/routing/view.html
+++ b/core/state_management/templates/routing/view.html
@@ -281,7 +281,7 @@
                             </dd>
                         </div>
                         <div>
-                            <dt class="text-xs font-medium text-gray-500 mb-1">MongoDB 實例</dt>
+                            <dt class="text-xs font-medium text-gray-500 mb-1">MongoDB instance</dt>
                             <dd class="text-sm">
                                 <code class="tech-code text-xs">{{ action.mongodb_instance }}</code>
                             </dd>
