--- a/core/state_management/templates/routing/wizard.html
+++ b/core/state_management/templates/routing/wizard.html
@@ -156,13 +156,13 @@
                     </div>
                 </div>
 
-                {# MongoDB 實例 #}
+                {# MongoDB instance #}
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">
-                        MongoDB 實例
+                        MongoDB instance
                     </label>
                     <p class="text-xs text-gray-500 mb-2">
-                        指定要使用的 MongoDB 資料庫實例名稱。保持預設值 "default" 即可使用主要資料庫。
+                        指定要使用的 MongoDB 資料庫instance名稱。保持預設值 "default" 即可使用主要資料庫。
                     </p>
                     <input type="text"
                            x-model="formData.mongodb_instance"
