--- a/core/state_management/templates/users/view.html
+++ b/core/state_management/templates/users/view.html
@@ -128,7 +128,7 @@
                     <i class="fas fa-check text-blue-500 mt-1 mr-3"></i>
                     <div>
                         <p class="text-sm font-medium text-gray-900">唯讀存取權限</p>
-                        <p class="text-sm text-gray-500">可以檢視設定、規則、實例以及節點資訊</p>
+                        <p class="text-sm text-gray-500">可以檢視設定、規則、instance以及節點資訊</p>
                     </div>
                 </div>
                 <div class="flex items-start">
